YAY WE ARE DONE!

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -24,29 +24,6 @@
   <!-- Custom styles for this template -->
   <link href="css/freelancer.min.css" rel="stylesheet">
 
-  <style>
-
-  .bar{
-    fill: steelblue;
-  }
-
-  .bar:hover{
-    fill: brown;
-  }
-
-  .axis {
-    font: 10px sans-serif;
-  }
-
-  .axis path,
-  .axis line {
-    fill: none;
-    stroke: #000;
-    shape-rendering: crispEdges;
-  }
-
-  </style>
-
 </head>
 
 <body id="page-top">
@@ -468,7 +445,7 @@
             <h2 class="text-secondary text-uppercase mb-0">DAC 19643-4/14</h2>
             <hr class="star-dark mb-5">
             <img class="img-fluid mb-5" src="img/portfolio/law1.jpg" alt="">
-            <p class="mb-5">THE CHARGES - The Accused was the Chairman and Managing Director of a public listed company, Eastern Holdings Ltd (“EHL”). He claimed trial to one charge of cheating under section 420 of the Penal Code, Cap 224 (“the cheating charge”), and one charge under section 156(1) punishable under section 156(10) of the Companies Act, Cap 50 (“the Companies Act charge”). After a trial spanning 13 days, I found him guilty on both charges.</p>
+            <p class="mb-5"></p>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
               <i class="fa fa-close"></i>
               Close Case</a>
@@ -548,7 +525,7 @@
     e.preventDefault();
     var user = document.getElementById('usernameid').value
     $.ajax({
-      url: "GET CATCH BY WORD API HERE",
+      url: "CATCH BY WORD API HERE",
       data: {name:"\""+user+"\""},
 	    type: "GET", // if you want to send data via the "data" property change this to "POST". This can be omitted otherwise
       success: function(responseData) {
